# gerdoo

./: .gitattributes  .gitignore  README.md  gerdoo.py  requirements.txt
app/: update_manifest.json
app/config/: settings.py  urls.py
app/main/: admin.py
app/main/templatetags/: custom_filters.py
app/main/views/: auth.py  cards.py  dashboard.py  pages.py  reporting.py  transactions.py
app/templates/main/: 404.html  auth.html  backup.html  cards.html  gold.html  guide.html  reporting.html  tags.html  transactions.html
config/: settings.py  urls.py
inst/: gerdoo_installer.py  inst_map.json
krnl/: kernel.json  kernel.py
krnl/bins/back/: back.json  back.py
krnl/bins/bash/: bash.json  bash.py
krnl/bins/goto/: goto.json  goto.py
krnl/bins/home/: home.json  home.py
krnl/bins/path/: path.json  path.py
krnl/bins/void/: void.json  void.py
launcher/: Cargo.toml
launcher/core/: Cargo.toml
launcher/core/src/: config.rs  interface.rs  output.rs
launcher/src/: config.rs  gui.rs  main.rs  server.rs  update.rs  updater.rs
main/: admin.py  models.py  urls.py  utils.py
main/views/: auth.py  backup.py  categories.py  dashboard.py  gold.py  guide.py  pages.py  tags.py  transactions.py
mdls/: gerdoolib.json  gerdoolib.py
prgs/extn/hash/: hash.json  hash.py
prgs/extn/jdt/: jdt.json  jdt.py
setg/: PASS.json  PATH.json
shll/: shell.json  shell.py
statics/res/: resources.txt
templates/: base.html
templates/main/: categories.html  dashboard.html  no_auth.html
updt/: gerdoo_updater.py  updt_map.json
vrsn/: version.json
(+41 files in other folders)
