[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0"
eframe = { version = "0.33.2", features = ["default"] }
opener = "0.8.3"
egui = "0.33.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
tokio = { version = "1.37.0", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }